app/assets/stylesheets/custom.css
html,
body {
  display         : flex;
  min-height      : 100vh;
  flex-direction  : column;
}

main {
  flex: 1;
}

.grid.contents {
  grid-template-columns: repeat(3, 1fr) !important;
}

.navbar strong {
  color: #fff;
}

.spacing {
  margin: 3vh 0px !important;
}

nav ul li strong {
  margin-left: 5px;
}

.contents h1, h2, h3 {
  margin-bottom: 20px !important;
}

ion-icon {
  font-size: 30px;
}

:not([data-theme=light]) ion-icon {
  color: #fff;
}

:not([data-theme=dark]) ion-icon {
  color: #000 !important;
}

audio {
  width: 100%;
}

[data-category]:before {
  background: #2b081f;
  content   : attr(data-category);
}

[data-category]:before {
  display      : block;
  position     : absolute;
  top          : 0;
  right        : 0;
  padding      : 0.375rem 0.75rem;
  border-radius: 0;
  color        : var(--primary-inverse);
  font-size    : 14px;
  line-height  : 1;
}

a {
  color          : aliceblue;
}

a:hover {
  color: rgb(216, 232, 248);
  text-decoration: none;

}

a:is([aria-current], :hover, :active, :focus), [role=link]:is([aria-current], :hover, :active, :focus) {
  color: initial !important;
  text-decoration: none !important ;
}

.avatar {
  width : 48px;
  height: auto;
  border-radius: 50%;
}

.text-right {
  text-align: right;
}

.text-center {
  text-align: center;
}

.contents article {
  display        : grid;
  justify-content: center;
  align-items    : center;
  height         : 279px !important;
  position       : relative !important;
}

th,
td {
  text-align: center;
}

.trix-content pre {
  background-color: #130013 !important;
  overflow-x:initial !important;
}

footer {
  background-color: #000;
}
footer p {
  color: #fff !important;

}

